Sun Feb 04 16:23:30 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.*: Apply patch from Lee Mallabone <lee@fonicmonkey.net>
	  To add a development define for debugging, and change a bit of
	  the layout to be more consistent.

Sat Feb 03 19:42:01 2001  George Lebl <jirka@5z.com>

	* daemon/display.c, daemon/gdm.c:  Fix corruption of GSLists on exit

Sat Feb 03 18:24:10 2001  George Lebl <jirka@5z.com>

	* daemon/xmdcp.c: apply some changes found in the gdm debian
	  paches, but they don't make any difference

Sat Feb 03 17:58:51 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c:  Patch from Tim Jansen <tim@tjansen.de> to fix
	  a buffer overflow with xinerama support

Sat Feb 03 15:39:29 2001  George Lebl <jirka@5z.com>

	* gdm.spec.in: patch from Lee Mallabone <lee@fonicmonkey.net>, to
	  make gdmconfig actually work. (install the glade and desktop file)

Fri Feb 02 23:32:56 2001  George Lebl <jirka@5z.com>

	* Release 2.0.97.1

Fri Feb 02 20:03:49 2001  George Lebl <jirka@5z.com>

	* configure.in, config/Default.redhat, config/Failsafe.redhat,
	  config/Failsafe.in, config/Makefile.am, gdm.spec.in:  First
	  attempt at making an rpm.  Doesn't break the build, but I doubt
	  it works as I haven't tried it.  Will test on my laptop later.

Fri Feb 02 18:29:40 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: the xinerama support might badmach if run under
	  a non xinerama supporting xserver, so trap errors and just assume
	  one screen if we get errors.

Thu Feb 01 18:28:33 2001  George Lebl <jirka@5z.com>

	* Release 2.0.97

Thu Feb 01 18:26:17 2001  George Lebl <jirka@5z.com>

	* gui/gdmlogin.c: Add a hack so that if the Welcome string is
	  set to a default, use the gettext translation for added hack
	  value and more translations.

Thu Feb 01 17:58:30 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.(c|glade): some glade fixes, and add a reset option
	  when applying

	* daemon/gdm.h: use true/false for booleans in defaults
