@@ -8,3 +8,7 @@ utmp/wtmp handling.
 
 RelaxPermissions is really an enum and gdmconfig will fuck it up
 if the user set it to '2'
+
+Default login for kiosks machines
+  DefaultLogin=user
+  DefaultLoginTimeout=30
