@@ -1,3 +1,8 @@
+Tue Feb 06 21:33:10 2001  George Lebl <jirka@5z.com>
+
+	* daemon/slave.c, daemon/verify-pam.c: pam cleanup done when slave
+	  exitting.
+
 Sun Feb 04 16:23:30 2001  George Lebl <jirka@5z.com>
 
 	* gui/gdmconfig.*: Apply patch from Lee Mallabone <lee@fonicmonkey.net>
